--- a/build.config
+++ b/build.config
@@ -3,7 +3,7 @@ CONFIG_VENDOR=XIAOMI
 CONFIG_PRODUCT=MT7621
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="R2100"
+CONFIG_FIRMWARE_PRODUCT_ID="RM-AC2100"
 
 ############################################################
 ### Linux kernel configuration
