--- a/build.config
+++ b/build.config
@@ -158,3 +158,17 @@ CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 
 ### Include mt7621_cpufreq support ~0.005MB
 #CONFIG_FIRMWARE_INCLUDE_MT7621_CPUFREQ=y
+
+
+############################################################
+### Connection settings SSH PROMETHEUS
+############################################################
+### IP
+IPWRT=192.168.1.1
+### Login
+ROOTWRT=admin
+### Password
+PWDR="admin"
+### SSH Port
+ssh_port="22"
+############################################################
